@@ -1,4 +1,9 @@
 Author: Gabriele Bertoli <gbertoli@cern.ch>
+Date:   Mon Oct 19 18:16:11 2015 +0200
+
+    MiniReaderSelectionCuts.h: Using cuts for JVT studies.
+
+Author: Gabriele Bertoli <gbertoli@cern.ch>
 Date:   Mon Oct 19 18:14:14 2015 +0200
 
     MiniReaderAlg.cxx: Commenting out some printouts.
